[gd_scene load_steps=3 format=3 uid="uid://bkrvga6uhpxxu"]

[ext_resource type="Script" path="res://menu/FirstMenu/settings.gd" id="1_gcj80"]
[ext_resource type="Theme" uid="uid://bbwkjvh6fjmcw" path="res://menu/FirstMenu/defaultTheme.tres" id="1_ypiwq"]

[node name="SettingTab" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gcj80")

[node name="TabContainer" type="TabContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_ypiwq")

[node name="Graphics" type="TabBar" parent="TabContainer"]
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Graphics"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Graphics/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="HBoxContainer" type="HBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme = ExtResource("1_ypiwq")
text = "Mode"

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="WindowsModeOption" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme = ExtResource("1_ypiwq")
text = "Resolution"

[node name="HSplitContainer" type="HSplitContainer" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="ResolutionOption" type="OptionButton" parent="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="Controls" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Controls"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="TabContainer/Controls/MarginContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Controls/MarginContainer/ScrollContainer"]
layout_mode = 2

[node name="jump" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Jump: SPACE
"

[node name="forward" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Forward: Z"

[node name="right" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Right: D"

[node name="left" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Left: Q"

[node name="backward" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Backward: S"

[node name="run" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Run: Move + SHIFT"

[node name="sneak" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Sneak: SHIFT"

[node name="attack" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Attack: left click"

[node name="interact" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Interact with the world: right click"

[node name="put" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Release a block: E / right click"

[node name="remove" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Remove a block: hold left click"

[node name="importMenu" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Import menu: L"

[node name="inventory" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Inventory: I"

[node name="item" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Select item from toolbar: 1-9 or mouse wheel"

[node name="gameMenu" type="Label" parent="TabContainer/Controls/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
text = "Game menu: ESC."

[node name="Sounds" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Sounds"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Sounds/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Option1" type="Label" parent="TabContainer/Sounds/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Label" parent="TabContainer/Sounds/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option 2"

[node name="CheckButton" type="CheckButton" parent="TabContainer/Sounds/MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 0
text = "Disable Sound "
flat = true

[node name="HSlider" type="HSlider" parent="TabContainer/Sounds/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="Accessibility" type="TabBar" parent="TabContainer"]
visible = false
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TabContainer/Accessibility"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -222.0
offset_bottom = 222.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 120
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 120
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="TabContainer/Accessibility/MarginContainer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 64

[node name="Option1" type="Label" parent="TabContainer/Accessibility/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option 1"

[node name="Option2" type="Label" parent="TabContainer/Accessibility/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Option 2"

[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer/WindowsModeOption" to="." method="_on_windows_mode_option_item_selected"]
[connection signal="item_selected" from="TabContainer/Graphics/MarginContainer/VBoxContainer/HBoxContainer2/ResolutionOption" to="." method="_on_resolution_option_item_selected"]
